[package]
name = "lurien"
version = "0.1.0"
edition = "2018"
description = "A tool to help manage config files on multiple devices"
repository = "https://github.com/tsoutsman/lurien"
license = "MIT OR Apache-2.0"

[dependencies]
clap = "3.0.0-beta.4"
ignore = "0.4"
grep = "0"
lazy_static = "1.4"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
